force-app/main/default/objects/Slot__c/Slot__c.object-meta.xml
<CustomObject>
    <description>Object containing final slots for stores.</description>
    <label>Créneau</label>
    <nameField>
        <displayFormat>S{00000}</displayFormat>
        <label>Slot number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Créneaux</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>