force-app/main/default/objects/Slot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Store concerned by the slot</description>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>Slots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>