force-app/main/default/objects/Slot__c/fields/AvailablePositions__c.field-meta.xml
<CustomField>
    <fullName>AvailablePositions__c</fullName>
    <description>Number of available positions (number of customer that can enter) for this slot</description>
    <formula>RecurringSlot__r.AvailablePositions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>