force-app/main/default/objects/Slot__c/fields/BookedPositions__c.field-meta.xml
<CustomField>
    <fullName>BookedPositions__c</fullName>
    <description>Number of positions that are already booked by customer on this slot</description>
    <label>Booked positions</label>
    <summarizedField>CustomerSlot__c.ProvidedNumberOfPersons__c</summarizedField>
    <summaryFilterItems>
        <field>CustomerSlot__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomerSlot__c.Slot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>