force-app/main/default/objects/Slot__c/fields/RecurringSlot__c.field-meta.xml
<CustomField>
    <fullName>RecurringSlot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recurring slot concerned by the slot</description>
    <label>Recurring slot</label>
    <referenceTo>RecurringSlot__c</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>Slots</relationshipName>
    <type>Lookup</type>
</CustomField>