force-app/main/default/objects/Slot__c/fields/RemainingPositions__c.field-meta.xml
<CustomField>
    <fullName>RemainingPositions__c</fullName>
    <description>Number of remaining positions (number of customer that can still book) for this slot</description>
    <formula>AvailablePositions__c - BookedPositions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>