force-app/main/default/objects/Slot__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <description>Starting date and time of the slot</description>
    <label>Starting date/time</label>
    <type>DateTime</type>
</CustomField>