force-app/main/default/objects/Slot__c/listViews/AllSlots.listView-meta.xml
<ListView>
    <fullName>AllSlots</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>StartDatetime__c</columns>
    <columns>AvailablePositions__c</columns>
    <columns>BookedPositions__c</columns>
    <columns>RemainingPositions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartDatetime__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Tous les créneaux</label>
</ListView>